+sbt-based benchmarks